{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 18,
  "lineage": "6d275771-4b42-c086-a74c-ee6bbc5a6a6c",
  "resources": [
    {
      "module": "module.vpc_resources",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "imported_igw",
      "provider": "module.vpc_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "igw-0759257f25ef27e69",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713187727:internet-gateway/igw-0759257f25ef27e69",
            "id": "igw-0759257f25ef27e69",
            "owner_id": "339713187727",
            "vpc_id": "vpc-0ac3883de5bde45b6"
          }
        },
        {
          "index_key": "igw-09f35f6915b6e9858",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713187727:internet-gateway/igw-09f35f6915b6e9858",
            "id": "igw-09f35f6915b6e9858",
            "owner_id": "339713187727",
            "tags": {
              "Name": "Terra-Auto-igw"
            },
            "tags_all": {
              "Name": "Terra-Auto-igw"
            },
            "vpc_id": "vpc-0deb766aa06396f05"
          }
        }
      ]
    },
    {
      "module": "module.vpc_resources",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "imported_nat",
      "provider": "module.vpc_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nat-05f2e1863c554a238",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03171e7a330a38446",
            "association_id": "eipassoc-046c99ccf8140a861",
            "connectivity_type": "public",
            "id": "nat-05f2e1863c554a238",
            "network_interface_id": "eni-0b696f2ed9f4ee288",
            "private_ip": "172.17.6.206",
            "public_ip": "3.209.23.207",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-087d5dbe8a831fe19",
            "tags": {
              "Name": "Terra-Auto-nat-public1-us-east-1a"
            },
            "tags_all": {
              "Name": "Terra-Auto-nat-public1-us-east-1a"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_resources",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "imported_rt",
      "provider": "module.vpc_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rtb-048d0996dc22e54cb",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713187727:route-table/rtb-048d0996dc22e54cb",
            "id": "rtb-048d0996dc22e54cb",
            "owner_id": "339713187727",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09f35f6915b6e9858",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terra-Auto-rtb-public"
            },
            "tags_all": {
              "Name": "Terra-Auto-rtb-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0deb766aa06396f05"
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "rtb-0f4737b749a439b17",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713187727:route-table/rtb-0f4737b749a439b17",
            "id": "rtb-0f4737b749a439b17",
            "owner_id": "339713187727",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05f2e1863c554a238",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terra-Auto-rtb-private1-us-east-1a"
            },
            "tags_all": {
              "Name": "Terra-Auto-rtb-private1-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0deb766aa06396f05"
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "rtb-0f9b0c42f45d5da6f",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713187727:route-table/rtb-0f9b0c42f45d5da6f",
            "id": "rtb-0f9b0c42f45d5da6f",
            "owner_id": "339713187727",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0deb766aa06396f05"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.vpc_resources",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "imported_sg",
      "provider": "module.vpc_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sg-040187bddedb38808",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713187727:security-group/sg-040187bddedb38808",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-040187bddedb38808",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "339713187727",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0deb766aa06396f05"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        },
        {
          "index_key": "sg-0a2929bc0cc568a1f",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713187727:security-group/sg-0a2929bc0cc568a1f",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a2929bc0cc568a1f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "339713187727",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ac3883de5bde45b6"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.vpc_resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "imported_subnet",
      "provider": "module.vpc_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-013c13bc11dbd80b1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713187727:subnet/subnet-013c13bc11dbd80b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.17.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013c13bc11dbd80b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713187727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terra-Auto-subnet-private1-us-east-1a"
            },
            "tags_all": {
              "Name": "Terra-Auto-subnet-private1-us-east-1a"
            },
            "vpc_id": "vpc-0deb766aa06396f05"
          }
        },
        {
          "index_key": "subnet-01a1b0471903cf7ca",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713187727:subnet/subnet-01a1b0471903cf7ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a1b0471903cf7ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713187727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Sub_us-east-1d"
            },
            "tags_all": {
              "Name": "Sub_us-east-1d"
            },
            "vpc_id": "vpc-0ac3883de5bde45b6"
          }
        },
        {
          "index_key": "subnet-025fcd0dc02a182c1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713187727:subnet/subnet-025fcd0dc02a182c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025fcd0dc02a182c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713187727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Sub_us-east-1c"
            },
            "tags_all": {
              "Name": "Sub_us-east-1c"
            },
            "vpc_id": "vpc-0ac3883de5bde45b6"
          }
        },
        {
          "index_key": "subnet-037ca5150d86bfa9c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713187727:subnet/subnet-037ca5150d86bfa9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037ca5150d86bfa9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713187727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Sub_us-east-1a"
            },
            "tags_all": {
              "Name": "Sub_us-east-1a"
            },
            "vpc_id": "vpc-0ac3883de5bde45b6"
          }
        },
        {
          "index_key": "subnet-05716b00f5ce2ae37",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713187727:subnet/subnet-05716b00f5ce2ae37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "172.31.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05716b00f5ce2ae37",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713187727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Sub_us-east-1f"
            },
            "tags_all": {
              "Name": "Sub_us-east-1f"
            },
            "vpc_id": "vpc-0ac3883de5bde45b6"
          }
        },
        {
          "index_key": "subnet-087d5dbe8a831fe19",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713187727:subnet/subnet-087d5dbe8a831fe19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.17.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087d5dbe8a831fe19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713187727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terra-Auto-subnet-public1-us-east-1a"
            },
            "tags_all": {
              "Name": "Terra-Auto-subnet-public1-us-east-1a"
            },
            "vpc_id": "vpc-0deb766aa06396f05"
          }
        },
        {
          "index_key": "subnet-0b8c870cd8cf2b6e8",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713187727:subnet/subnet-0b8c870cd8cf2b6e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8c870cd8cf2b6e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713187727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Sub_us-east-1b"
            },
            "tags_all": {
              "Name": "Sub_us-east-1b"
            },
            "vpc_id": "vpc-0ac3883de5bde45b6"
          }
        },
        {
          "index_key": "subnet-0d3170b8337358f5c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713187727:subnet/subnet-0d3170b8337358f5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "172.31.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3170b8337358f5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713187727",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Sub_us-east-1e"
            },
            "tags_all": {
              "Name": "Sub_us-east-1e"
            },
            "vpc_id": "vpc-0ac3883de5bde45b6"
          }
        }
      ]
    },
    {
      "module": "module.vpc_resources",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "imported_vpc",
      "provider": "module.vpc_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc-0ac3883de5bde45b6",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713187727:vpc/vpc-0ac3883de5bde45b6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-01693ee5160155dc0",
            "default_route_table_id": "rtb-0cf454d4d34bae4bb",
            "default_security_group_id": "sg-0a2929bc0cc568a1f",
            "dhcp_options_id": "dopt-09cd5f3382f696b6f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ac3883de5bde45b6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cf454d4d34bae4bb",
            "owner_id": "339713187727",
            "tags": {
              "Name": "Default_VPC"
            },
            "tags_all": {
              "Name": "Default_VPC"
            }
          }
        },
        {
          "index_key": "vpc-0deb766aa06396f05",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713187727:vpc/vpc-0deb766aa06396f05",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-0bdbc02b40653de88",
            "default_route_table_id": "rtb-0f9b0c42f45d5da6f",
            "default_security_group_id": "sg-040187bddedb38808",
            "dhcp_options_id": "dopt-09cd5f3382f696b6f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0deb766aa06396f05",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f9b0c42f45d5da6f",
            "owner_id": "339713187727",
            "tags": {
              "Name": "Terra-Auto-vpc"
            },
            "tags_all": {
              "Name": "Terra-Auto-vpc"
            }
          }
        }
      ]
    }
  ]
}